[package]
name = "yew-json-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "*"
web-sys = "*"
gloo = "*"
stylist = "*"
once_cell = "*"
url = "*"

[lib]
crate-type = ["cdylib", "rlib"]